[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "clarivuexai"
version = "0.1.0"
description = "A unified framework for explainable AI"
readme = "README.md"
authors = [
    {name = "wizcodes", email = "wizcodes12@gmail.com"}
]
license = {text = "MIT"}
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.19.0",
    "pandas>=1.1.0",
    "scikit-learn>=0.24.0",
    "matplotlib>=3.3.0",
    "seaborn>=0.11.0",
    "plotly>=5.0.0",
    "shap>=0.39.0",
    "lime>=0.2.0",
]

[project.optional-dependencies]
tensorflow = ["tensorflow>=2.4.0"]
torch = ["torch>=1.8.0", "torchvision>=0.9.0"]
dev = [
    "pytest>=6.0.0",
    "pytest-cov>=2.12.0",
    "sphinx>=4.0.0",
    "sphinx-rtd-theme>=0.5.0",
    "myst-parser>=0.15.0",  # Add this
    "black>=21.5b2",
    "isort>=5.9.0",
    "flake8>=3.9.0",
]
all = [
    "tensorflow>=2.4.0",
    "torch>=1.8.0",
    "torchvision>=0.9.0",
]

[project.urls]
"Homepage" = "https://github.com/wizcodes12/clarivuexai"
"Bug Tracker" = "https://github.com/wizcodes12/clarivuexai/issues"
"Documentation" = "https://clarivuexai.readthedocs.io/"

[project.scripts]
clarivuexai = "clarivuexai.cli:main"

[tool.black]
line-length = 88
target-version = ["py38"]

[tool.isort]
profile = "black"
line_length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
